Fix code scan vulnerabilities -add path traversal protection and centralized resource validation -hardened classpath scanning and script execution safety -fix unsafe string replacement and extended validation coverage